infra/k8s/comments-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: comments-clusterip-srv
spec:
    selector:
        app: comments
    type: ClusterIP
    ports:
        - name: comments
          protocol: TCP
          port: 4001
          targetPort: 4001
