infra/k8s/posts-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: posts-clusterip-srv
spec:
    selector:
        app: posts
    type: ClusterIP
    ports:
        - name: posts
          protocol: TCP
          port: 4000
          targetPort: 4000
